@@ -2,51 +2,26 @@
 
 import csv
 
-from agate import Table, DateType, NumberType, TextType, Sum, StDev
+import agate
 
-text_type = TextType()
-number_type = NumberType()
-date_type = DateType()
+tester = agate.TypeTester(force={
+    'fips': agate.TextType()
+})
 
-COLUMNS = (
-    ('state', text_type),
-    ('county', text_type),
-    ('fips', text_type),
-    ('nsn', text_type),
-    ('item_name', text_type),
-    ('quantity', number_type),
-    ('ui', text_type),
-    ('acquisition_cost', number_type),
-    ('total_cost', number_type),
-    ('ship_date', date_type),
-    ('federal_supply_category', text_type),
-    ('federal_supply_category_name', text_type),
-    ('federal_supply_class', text_type),
-    ('federal_supply_class_name', text_type),
-)
-
-with open('examples/realdata/ks_1033_data.csv') as f:
-    # Create a csv reader
-    reader = csv.reader(f)
-
-    # Skip header
-    next(f)
-
-    # Create the table
-    table = Table(reader, COLUMNS)
+table = agate.Table.from_csv('examples/realdata/ks_1033_data.csv', tester)
 
 # Filter to counties containing Kansas City
 kansas_city = table.where(lambda r: r['county'] in ('JACKSON', 'CLAY', 'CASS', 'PLATTE'))
 
 # Sum total_cost of four counties
-print('Total for Kansas City area: %i' % kansas_city.columns['total_cost'].aggregate(Sum()))
+print('Total for Kansas City area: %i' % kansas_city.columns['total_cost'].aggregate(agate.Sum()))
 
 # Group by county
 counties = table.group_by('county')
 
 # Aggregate totals for all counties
 totals = counties.aggregate([
-    ('total_cost', Sum(), 'total_cost_sum')
+    ('total_cost', agate.Sum(), 'total_cost_sum')
 ])
 
 totals = totals.order_by('total_cost_sum', reverse=True).rows[:5]
@@ -67,11 +42,11 @@ for row in recent_five:
     print(text)
 
 # Calculate the standard of deviation for the total_costs
-stdev = table.columns['total_cost'].aggregate(StDev())
+stdev = table.columns['total_cost'].aggregate(agate.StDev())
 
 print('Standard deviation of total_cost: %.2f' % stdev)
 
 # How many roborts were purchased?
-robots = table.where(lambda r: 'ROBOT' in (r['item_name'] or [])).columns['quantity'].aggregate(Sum())
+robots = table.where(lambda r: 'ROBOT' in (r['item_name'] or [])).columns['quantity'].aggregate(agate.Sum())
 
 print('Number of robots purchased: %i' % robots)
